2010-04-25	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* rtems/score/cpu.h: Remove warning in _CPU_Context_Initialize.

2010-03-27	Joel Sherrill <joel.sherrill@oarcorp.com>

	* cpu.c, cpu_asm.S: Add include of config.h

2009-03-12	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1385/cpukit
	* cpu_asm.S: When the type rtems_boolean was switched to the C99 bool,
	the size changed from 4 bytes to 1 byte. The interrupt dispatching
	code accesses two boolean variables for scheduling purposes and the
	assembly implementations of this code did not get updated.

2009-02-12	Joel Sherrill <joel.sherrill@oarcorp.com>

	* cpu.c: Change prototype of IDLE thread to consistently return void *
	and take a uintptr_t argument.

2009-02-11	Joel Sherrill <joel.sherrill@oarcorp.com>

	* cpu.c, rtems/score/cpu.h: Eliminate _CPU_Thread_dispatch_pointer and
	passing address of _Thread_Dispatch to _CPU_Initialize. Clean up
	comments.

2009-02-11	Joel Sherrill <joel.sherrill@oarcorp.com>

	* rtems/score/cpu.h: Do not unroll any code on this target and use a
	16-bit object id.

2008-10-14	Joel Sherrill <joel.sherrill@oarcorp.com>

	* cpu_asm.S: Enable same code paths for SX. Tested on simulator.

2008-10-14	Steven Grunza <grunza@ulticom.com>

	* cpu_asm.S: Use proper diredctive for h8300/sx.

2008-09-11	Ralf Corsépius <ralf.corsepius@rtems.org>

	* rtems/score/types.h: Do not define boolean, single_precision,
	double_precision unless RTEMS_DEPRECATED_TYPES is given.

2008-09-08	Joel Sherrill <joel.sherrill@oarcorp.com>

	* rtems/score/cpu.h: Remove extraneous spaces.

2008-08-21	Ralf Corsépius <ralf.corsepius@rtems.org>

	* rtems/score/types.h: Include stdbool.h.
	Use bool as base-type for boolean.

2008-07-31	Joel Sherrill <joel.sherrill@OARcorp.com>

	* cpu.c, rtems/score/cpu.h: Correct prototype of Idle threads.

2008-06-05	Joel Sherrill <joel.sherrill@OARcorp.com>

	* rtems/score/cpu.h: Add CPU_SIMPLE_VECTORED_INTERRUPTS porting